--- a/final/src3/styles.css
+++ b/final/src3/styles.css
@@ -82,6 +82,16 @@ h1
 
 }
 
+.module-edit
+{
+	margin:10px;
+	padding:5px;
+	float:left;
+	width:300px;
+	border-radius:5px;
+	background-color:#ccc;
+}
+
 .upload-m
 {
 	background-color:#ddd;
